css and js pages

--- a/html.html
+++ b/html.html
@@ -1,6 +1,15 @@
 <html>
   <head> </head>
   <body>
-    <h1>Salut lume</h1>
+    <H1>Salut lume </H1>
+    <H2>Acesta este un titlu mai mic </H2>
+    <H6>Cel mai mic titlu </H3>
+    <p>Acesta este un paragraf, el poate sa fie oricat de lung, lung, lung, lung,</p>
+    <button>Acesta este un buton </button>
+    <img src="https://i.kym-cdn.com/photos/images/original/000/011/296/success_baby.jpg" alt="Meme Bebelus">
+    <div>
+      <p>Acesta este un paragraf intr-un div</p>
+    </div>
+    <a href="https://www.google.com">Link catre Google</a>
   </body>
 </html>
