--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<!doctype html>
+<html>
+  <body>
+<script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1PWYME2KLbw5UGlreE8iuk7q"
+  publishable-key="pk_live_51P5TTb2KLbw5UGlrtz13LYP6nWJ4TN3ig5yan4WnZu5aKu4uMIfJJkav6He07HHuu1liPhXbpDZlcgTEunSLfs8h000lS63l6M"
+>
+</stripe-buy-button>
+    
+    </body>
+      </html>
